--- a/templatemo_512_moonlight/index-test-added-1-page.html
+++ b/templatemo_512_moonlight/index-test-added-1-page.html
@@ -66,7 +66,7 @@ http://www.templatemo.com/tm-512-moonlight
                       <p>I'm <em>ENEMALI U, SOLOMON</em>, from NIGERIA Kogi Sate and olamaborow local goverment to be precise. I spent my early
                     year in lagos which affects my intonation lol.</p>
                       <div class="main-btn"><a href="#2">Read More</a></div>
-                      <div class="fb-btn"><a rel="nofollow" href="https://fb.com/templatemo">Our FB Page</a></div>
+                      <div class="fb-btn"><a rel="nofollow" href="https://web.facebook.com/solomon.mali">MY FACE BOOK</a></div>
                   </div>
               </div>
             </div>
@@ -83,7 +83,7 @@ http://www.templatemo.com/tm-512-moonlight
                     
                       <div class="main-btn"><a href="#2">Read More</a></div>
                       <div class="fb-btn">
-                        <a rel="unfollow" href="https://www.facebook.com/solomon.mali">my FB Page</a></div>
+                        <a rel="unfollow" href="https://web.facebook.com/solomon.mali">my FB Page</a></div>
                   </div>
               </div>
             </div>
